--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha --compilers js:babel-core/register ./test --recursive",
     "compile": "babel --presets es2015,stage-0 -d lib/ src/",
-    "prepublish": "npm run compile"
+    "process": "node src/run './data/input-1.ini'"
   },
   "repository": {
     "type": "git",
@@ -17,9 +17,9 @@
   "author": "Tobias Rask",
   "license": "MIT",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/tobiasrask/space-fast-track/issues"
   },
-  "homepage": "",
+  "homepage": "https://github.com/tobiasrask/space-fast-track",
   "devDependencies": {
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
